--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.1",
+    "react-onesignal": "^3.4.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
