--- a/package.json
+++ b/package.json
@@ -10,24 +10,36 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.0",
+    "@google/genai": "^1.34.0",
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "chart.js": "^4.5.1",
+    "chrono-node": "^2.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.555.0",
     "next": "^16.0.7",
     "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.1",
+    "react-markdown": "^9.0.3",
     "react-onesignal": "^3.4.0",
-    "tailwind-merge": "^3.4.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "^16.0.7",
